# swayautonames

./: .conform.yaml  Cargo.toml  README.md  config.json  flake.nix
.github/workflows/: build.yaml  linting.yaml  mr.yaml
nix/: actions.nix  package.nix  shell.nix
src/: config.rs  main.rs  manager.rs
src/wm/: hyprland.rs  mod.rs  sway.rs
