[package]
name = "swayautonames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.30"
inotify = "0.11.0"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
swayipc-async = "2.0.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
