[package]
name = "swayautonames"
version = "0.1.0"
edition = "2021"

[features]
default = ["sway", "hyprland"]
sway = ["dep:swayipc-async"]
hyprland = ["dep:hyprland"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.30"
hyprland = { version = "0.4.0-beta.1", optional = true}
inotify = "0.11.0"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
swayipc-async = { version = "2.0.2", optional = true}
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
